--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ instagram_username: "michaelpfaith"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-theme: "minima"
+theme: "slate"
 
 rss: rss
 
